[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "Estruturação de um projeto de ETL do zero"
authors = ["Matheus Costa <matheeusferreeira@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
