[tool.poetry]
name = "estrutura-workshop"
version = "0.1.0"
description = "Estruturação de um projeto de ETL do zero"
authors = ["Matheus Costa <matheeusferreeira@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pandas = "^2.1.3"
faker = "^20.0.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.0"
pre-commit = "^3.5.0"


[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.4"
pygments = "^2.16.1"
mkdocs-material = "^9.4.8"
pymdown-extensions = "^10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && black ."
kill = "kill -9 $(lsof -t -i :8000)"
test = "poetry run pytest -v"
run = "python -m src.main"
